fix(layout): sidebar, header 의 padding 값 조절 및 children 내 gap, padding 조절에 따른 side-panel 관련 css 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,8 @@
   --foreground: #171717;
 
   /* Layout */
-  --side-bar-width: 80px;
-  --header-height: 80px;
+  --side-bar-width: fit-content;
+  --header-height: fit-content;
 
   /* Z-Index */
   --z-header: 100;
@@ -773,6 +773,8 @@ body {
     BlinkMacSystemFont,
     system-ui,
     sans-serif;
+  font-size: 16px;
+  box-sizing: border-box;
 }
 
 @layer utilities {
