--- a/src/commons/components/animal-card/styles.module.css
+++ b/src/commons/components/animal-card/styles.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  gap: 24px;
+  gap: 16px;
   width: 408px;
   padding: 24px;
   border-radius: 42px;
@@ -35,10 +35,10 @@
 }
 
 .nickname {
-  font-family: var(--typo-heading-xl-font-family);
-  font-size: var(--typo-heading-xl-font-size);
+  font-family: var(--typo-heading-lg-font-family);
+  font-size: var(--typo-heading-lg-font-size);
   font-weight: var(--font-weight-semibold);
-  line-height: var(--typo-heading-xl-line-height);
+  line-height: var(--typo-heading-lg-line-height);
   color: var(--color-text-primary);
   white-space: nowrap;
   margin: 0;
@@ -130,10 +130,10 @@
 }
 
 .descriptionTitle {
-  font-family: var(--typo-heading-xl-font-family);
-  font-size: var(--typo-heading-xl-font-size);
+  font-family: var(--typo-heading-md-font-family);
+  font-size: var(--typo-heading-md-font-size);
   font-weight: var(--font-weight-semibold);
-  line-height: var(--typo-heading-xl-line-height);
+  line-height: var(--typo-heading-md-line-height);
   color: var(--color-text-primary);
   white-space: nowrap;
   margin: 0;
